--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,27 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.196
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Implement suppress-max attribute for cs:names
+  and fix bug in implicit conditional behavior within
+  cs:group when cs:names renders no output due
+  to suppress-min or supprexx-max. (Note that neither
+  suppress-min nor suppress-max are valid in CSL 1.0).
+
+- Treat numerals as lowercase letters when evaluating
+  text-case="title".
+
+- Fix bug in editor-translator magical merging that
+  caused lone translators to disappear.
+
+
+==========================
 Changes in version 1.0.195
 ==========================
 
