--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.199
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix another bug in multilingual layouts, triggered by the
+  use of cs:number, strangely enough.
+
+
+==========================
 Changes in version 1.0.198
 ==========================
 
